--- a/Magtong/export_presets.cfg
+++ b/Magtong/export_presets.cfg
@@ -3,7 +3,7 @@
 name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -46,10 +46,10 @@ application/export_angle=0
 application/export_d3d12=0
 application/d3d12_agility_sdk_multiarch=true
 ssh_remote_deploy/enabled=false
-ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/host="MisterIXI@192.168.178.20"
 ssh_remote_deploy/port="22"
-ssh_remote_deploy/extra_args_ssh=""
-ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/extra_args_ssh="-i C:\\Users\\MisterIXI\\.ssh\\olive_key -o StrictHostKeyChecking=no"
+ssh_remote_deploy/extra_args_scp="-i C:\\Users\\MisterIXI\\.ssh\\olive_key -o StrictHostKeyChecking=no"
 ssh_remote_deploy/run_script="Expand-Archive -LiteralPath '{temp_dir}\\{archive_name}' -DestinationPath '{temp_dir}'
 $action = New-ScheduledTaskAction -Execute '{temp_dir}\\{exe_name}' -Argument '{cmd_args}'
 $trigger = New-ScheduledTaskTrigger -Once -At 00:00
