Company name added

--- a/Magtong/export_presets.cfg
+++ b/Magtong/export_presets.cfg
@@ -39,7 +39,7 @@ application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name="IXIGames"
+application/company_name="Oberwald Studios"
 application/product_name="Magtong"
 application/file_description=""
 application/copyright=""
